# LogicEngineCpp

./: CMakeLists.txt  README.md  main.cpp  soundextext.cpp
